@startuml

title __SERVÝCE's Class Diagram__\n

  namespace com.team1.animalproject {
    namespace service {
      class com.team1.animalproject.service.AnimalService {
          + delete()
          + getAll()
          + save()
          + update()
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace service {
      interface com.team1.animalproject.service.IBaseService {
          {abstract} + delete()
          {abstract} + getAll()
          {abstract} + save()
          {abstract} + update()
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace service {
      class com.team1.animalproject.service.ShelterService {
          + addWorker()
          + delete()
          + getAll()
          + getWorkersByShelterId()
          + save()
          + update()
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace service {
      class com.team1.animalproject.service.UserService {
          + delete()
          + findById()
          + findByUserNameAndPassword()
          + getAll()
          + save()
          + update()
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace service {
      class com.team1.animalproject.service.VetService {
          + delete()
          + getAll()
          + save()
          + update()
      }
    }
  }
  

  com.team1.animalproject.service.AnimalService .up.|> com.team1.animalproject.service.IBaseService
  com.team1.animalproject.service.AnimalService o-- com.team1.animalproject.repository.AnimalRepository : animalRepository
  com.team1.animalproject.service.ShelterService .up.|> com.team1.animalproject.service.IBaseService
  com.team1.animalproject.service.ShelterService o-- com.team1.animalproject.repository.ShelterRepository : shelterRepository
  com.team1.animalproject.service.ShelterService o-- com.team1.animalproject.repository.ShelterWorkerRepository : shelterWorkerRepository
  com.team1.animalproject.service.UserService .up.|> com.team1.animalproject.service.IBaseService
  com.team1.animalproject.service.UserService o-- com.team1.animalproject.repository.UserRepository : userRepository
  com.team1.animalproject.service.VetService .up.|> com.team1.animalproject.service.IBaseService
  com.team1.animalproject.service.VetService o-- com.team1.animalproject.repository.VetRepository : vetRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
